5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4496/executions/1828_1644.log
== TEST (2019-06-12 14:02:58) 
-- CODE:
from numpy import*
nf = array(eval(input("Nota Final: ")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:03:10) 
-- CODE:
from numpy import*
nf = array(eval(input("Nota Final: ")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:03:26) 
-- CODE:
from numpy import*
nf = array(eval(input("Nota Final: ")))
print(nf)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:18:30) 
-- CODE:
from numpy import*
nf = array(eval(input("Nota Final: ")))
rp = 0
for i in nf:
	if(nf[i] <= 5):
		rp = rp + 1
print(rp)
	
#nf >= 5.0
#print(rp) = ?
#
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:18:45) 
-- CODE:
from numpy import*
nf = array(eval(input("Nota Final: ")))
rp = 0
for i in nf:
	if(nf[i] <= 5):
		rp = rp + 1
print(rp)
	
#nf >= 5.0
#print(rp) = ?
#
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:19:18) 
-- CODE:
from numpy import*
nf = array(eval(input("Nota Final: ")))
rp = 0
for i in range(size(nf)):
	if(nf[i] <= 5):
		rp = rp + 1
print(rp)
	
#nf >= 5.0
#print(rp) = ?
#
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:19:31) 
-- CODE:
from numpy import*
nf = array(eval(input("Nota Final: ")))
rp = 0
for i in range(size(nf)):
	if(nf[i] < 5):
		rp = rp + 1
print(rp)
	
#nf >= 5.0
#print(rp) = ?
#
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:22:12) 
-- CODE:
from numpy import*
nf = array(eval(input("Nota Final: ")))
rp = 0
q = 0
for i in range(size(nf)):
	if(nf[i] < 5):
		rp = rp + 1

for i in range(size(nf)):
	if(nf[i] == rp):
		q = q + 1
print(rp)
print(q)
	
#nf >= 5.0
#print(rp) = ?
#
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:23:01) 
-- CODE:
from numpy import*
nf = array(eval(input("Nota Final: ")))
rp = 0
q = 0
for i in range(size(nf)):
	if(nf[i] < 5):
		rp = rp + 1

for i in range(size(nf)):
	if(nf[i] == rp):
		q = q[i] + 1
print(rp)
print(q)
	
#nf >= 5.0
#print(rp) = ?
#
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:23:34) 
-- CODE:
from numpy import*
nf = array(eval(input("Nota Final: ")))
rp = 0

for i in range(size(nf)):
	if(nf[i] < 5):
		rp = rp + 1
q = 0
for i in range(size(nf)):
	if(nf[i] == rp):
		q = q[i] + 1
print(rp)
print(q)
	
#nf >= 5.0
#print(rp) = ?
#
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:23:51) 
-- CODE:
from numpy import*
nf = array(eval(input("Nota Final: ")))
rp = 0

for i in range(size(nf)):
	if(nf[i] < 5):
		rp = rp + 1
q = 0
for i in range(size(nf)):
	if(nf[i] == rp):
		q[i] = q[i] + 1
print(rp)
print(q)
	
#nf >= 5.0
#print(rp) = ?
#
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:24:24) 
-- CODE:
from numpy import*
nf = array(eval(input("Nota Final: ")))
rp = 0

for i in range(size(nf)):
	if(nf[i] < 5):
		rp = rp + 1
q = 0
for i in range(size(nf)):
	if(rp == q):
		q[i] = q[i] + 1
print(rp)
print(q)
	
#nf >= 5.0
#print(rp) = ?
#
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:25:02) 
-- CODE:
from numpy import*
nf = array(eval(input("Nota Final: ")))
rp = 0

for i in range(size(nf)):
	if(nf[i] < 5):
		rp = rp + 1
q = 0
for i in range(size(nf)):
	if(rp == q):
		q[i] = q[i] + 1
print(rp)
print(q[i])
	
#nf >= 5.0
#print(rp) = ?
#
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:26:11) 
-- CODE:
from numpy import*
nf = array(eval(input("Nota Final: ")))
rp = 0
q = 0
for i in range(size(nf)):
	if(nf[i] < 5):
		rp = rp + 1

for i in nf:
	if(nf == rp):
		q = q + 1
print(rp)
print(q)
	
#nf >= 5.0
#print(rp) = ?
#
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:26:41) 
-- CODE:
from numpy import*
nf = array(eval(input("Nota Final: ")))
rp = 0
q = 0
for i in range(size(nf)):
	if(nf[i] < 5):
		rp = rp + 1

for i in nf:
	if(nf[i] == rp):
		q = q + 1
print(rp)
print(q)
	
#nf >= 5.0
#print(rp) = ?
#
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:27:07) 
-- CODE:
from numpy import*
nf = array(eval(input("Nota Final: ")))
rp = 0
q = 0
for i in range(size(nf)):
	if(nf[i] < 5):
		rp = rp + 1

for i in nf:
	nf[i] == rp
		q = q + 1
print(rp)
print(q)
	
#nf >= 5.0
#print(rp) = ?
#
-- ERROR:
File "XXXX", line 11
    q = q + 1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:27:20) 
-- CODE:
from numpy import*
nf = array(eval(input("Nota Final: ")))
rp = 0
q = 0
for i in range(size(nf)):
	if(nf[i] < 5):
		rp = rp + 1

for i in nf:
	nf[i] == rp
		q[i] = q + 1
print(rp)
print(q)
	
#nf >= 5.0
#print(rp) = ?
#
-- ERROR:
File "XXXX", line 11
    q[i] = q + 1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:27:31) 
-- CODE:
from numpy import*
nf = array(eval(input("Nota Final: ")))
rp = 0
q = 0
for i in range(size(nf)):
	if(nf[i] < 5):
		rp = rp + 1

for i in nf:
	nf[i] == rp
	q = q + 1
print(rp)
print(q)
	
#nf >= 5.0
#print(rp) = ?
#
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:28:05) 
-- CODE:
from numpy import*
nf = array(eval(input("Nota Final: ")))
rp = 0
q = 0
for i in range(size(nf)):
	if(nf[i] < 5):
		rp = rp + 1

for i in range(size(nf)):
	nf[i] == rp
	q = q + 1
print(rp)
print(q)
	
#nf >= 5.0
#print(rp) = ?
#
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:29:12) 
-- CODE:
from numpy import*
nf = array(eval(input("Nota Final: ")))
rp = 0
q = 0
for i in range(size(nf)):
	if(nf[i] < 5):
		rp = rp + 1

for i in range(size(nf)):
	nf[i] == rp
	q = q + [i]
print(rp)
print(q)
	
#nf >= 5.0
#print(rp) = ?
#
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:29:24) 
-- CODE:
from numpy import*
nf = array(eval(input("Nota Final: ")))
rp = 0
q = 0
for i in range(size(nf)):
	if(nf[i] < 5):
		rp = rp + 1

for i in range(size(nf)):
	nf[i] == rp
	q = q + i
print(rp)
print(q)
	
#nf >= 5.0
#print(rp) = ?
#
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:30:55) 
-- CODE:
from numpy import*
nf = array(eval(input("Nota Final: ")))
rp = 0
q = 0
for i in range(size(nf)):
	if(nf[i] < 5):
		rp = rp + 1

for i in range(size(nf)):
	if(nf[i] < 5):
	q = q + 1
print(rp)
print(q)
	
#nf >= 5.0
#print(rp) = ?
#
-- ERROR:
File "XXXX", line 11
    q = q + 1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:31:12) 
-- CODE:
from numpy import*
nf = array(eval(input("Nota Final: ")))
rp = 0
q = 0
for i in range(size(nf)):
	if(nf[i] < 5):
		rp = rp + 1

for i in range(size(nf)):
	if(nf[i] < 5):
		q = q + 1
print(rp)
print(q)
	
#nf >= 5.0
#print(rp) = ?
#
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:39:24) 
-- CODE:
from numpy import*
nf = array(eval(input("Nota Final: ")))
rp = 0

for i in range(size(nf)):
	if(nf[i] < 5):
		rp = rp + 1

a = 0
for i in range(size(nf)):
	if(nf[i] == rp):
		a[i] = aux
		
		
b = zeros(size, dtype=int)
print(rp)
print(b)
	
#nf >= 5.0
#print(rp) = ?
#
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:16:41) 
-- CODE:
from numpy import*
nf = array(eval(input("Nota Final: ")))
rp = 0

for i in range(size(nf)):
	if(nf[i] < 5):
		rp = rp + 1

a = 0
for i in range(size(nf)):
	if(nf[i] == rp):
		a[i] = aux
		
		
b = zeros(size, dtype=int)
print(rp)
print(b)
	
#nf >= 5.0
#print(rp) = ?
#
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:17:30) 
-- CODE:
from numpy import*
nf = array(eval(input("Nota Final: ")))
rp = 0

for i in range(size(nf)):
	if(nf[i] < 5):
		rp = rp + 1

a = 0
for i in range(size(nf)):
	if(nf[i] == rp):
		a = a + 1
		
		
b = zeros(size, dtype=int)
print(rp)
print(b)
	
#nf >= 5.0
#print(rp) = ?
#
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:17:51) 
-- CODE:
from numpy import*
nf = array(eval(input("Nota Final: ")))
rp = 0

for i in range(size(nf)):
	if(nf[i] < 5):
		rp = rp + 1

a = 0
for i in range(size(nf)):
	if(nf[i] == rp):
		a = a + 1
		
		
b = zeros(5, dtype=int)
print(rp)
print(b)
	
#nf >= 5.0
#print(rp) = ?
#
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:48:16) 
-- CODE:
from numpy import*
nf = array(eval(input("Nota Final: ")))
rp = 0

for i in range(size(nf)):
	if(nf[i] < 5):
		rp = rp + 1

a = 0
b = zeros(rp, dtype = int)
for i in range(size(nf)):
	if(nf[i] < 5):
		b[a] = i
		a = a + 1
				
print(rp)
print(b)
	
#nf >= 5.0
#print(rp) = ?
#
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 15:48:34) 
-- CODE:
from numpy import*
nf = array(eval(input("Nota Final: ")))
rp = 0

for i in range(size(nf)):
	if(nf[i] < 5):
		rp = rp + 1

a = 0
b = zeros(rp, dtype = int)
for i in range(size(nf)):
	if(nf[i] < 5):
		b[a] = i
		a = a + 1
				
print(rp)
print(b)
	
#nf >= 5.0
#print(rp) = ?
#
-- EXECUTION TIME:
1.24911
-- TEST CASE 1:
---- input:
[4.3,5.2,3.6,10,9.8,7.1,5,9.0,4.2,7.0,4.5]
---- correct output:
4
[ 0  2  8 10]
---- user output:
4
[ 0  2  8 10]
-- TEST CASE 2:
---- input:
[7.5,2.4,3.6,4,7.9,4.5,4.2,7.0,4.5]
---- correct output:
6
[1 2 3 5 6 8]
---- user output:
6
[1 2 3 5 6 8]
-- TEST CASE 3:
---- input:
[3.6,2.9,5,7,4.5,7.8,9.0]
---- correct output:
3
[0 1 4]
---- user output:
3
[0 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
